--- a/src/make/bear.css
+++ b/src/make/bear.css
@@ -65,11 +65,12 @@
 .ber img {
   max-width: 30vw;
   max-height: 60vh;
-margin-top: 93px;
+  margin-top: 93px;
   z-index: 1;
   margin-left: -380px;
 }
-.cone{
+
+.cone {
   z-index: 0;
   height: 40vh;
   position: absolute;
@@ -164,12 +165,85 @@ margin-top: 93px;
   gap: 20px;
 }
 
-.arlef .arrig{
+.arlef .arrig {
   color: black;
   margin-top: 40px;
 }
-.arlef:hover,.arrig:hover{
+
+.arlef:hover,
+.arrig:hover {
   color: white;
   background-color: #FFD600;
   border-radius: 100%;
+}
+
+@media(max-width:1024px) {
+  .text-box {
+    background: #FFD600;
+    padding: 70px 50px;
+    transform: skew(-30deg);
+    display: flex;
+    height: 15vh;
+    margin-left: 60px;
+    width: 95vw;
+    margin-top: 140px;
+    flex-direction: column;
+    justify-content: center;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 60px;
+    border-top-left-radius: 90px;
+  }
+.text-box h1 {
+  font-size: 36px;
+  font-weight: bold;
+  color: #000;
+  text-align: center;
+  margin: 0;
+  line-height: 1.4;
+}
+.cone {
+  z-index: 0;
+  height: 40vh;
+  position: absolute;
+  margin-left: 100px;
+  margin-top: 10px;
+  width: 20vw;
+}
+  .ber img {
+    max-width: 30vw;
+    max-height: 60vh;
+    margin-top: 93px;
+    z-index: 1;
+    margin-left: -170px;
+  }
+  .bttn button {
+  height: 6vh;
+  width: 250px;
+  font-size: 21PX;
+  margin-left: 40vw;
+  border: none;
+  border-radius: 20px;
+  font-weight: 600;
+  caret-color: transparent;
+  cursor: pointer;
+  margin-top: 50px;
+  background-color: rgba(252, 223, 64, 1);
+}
+.next {
+  height: 5vh;
+  width: 10vw;
+  margin-left:38vh;
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
+  cursor: pointer;
+
+}
+.lock p {
+  font-size: 16px;
+  text-align: center;
+  max-width: 200px;
+  margin: 0 auto;
+  cursor: pointer;
+}
 }
