--- a/src/make/order.css
+++ b/src/make/order.css
@@ -110,6 +110,7 @@
 /* Full screen container */
 .order-container {
     width: 100vw;
+    caret-color: transparent;
     height: 100vh;
     padding: 20px;
     box-sizing: border-box;
@@ -231,7 +232,7 @@ text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 5.5vh;
+    height: 5vh;
     
     background-color: orange;
 }
@@ -274,6 +275,85 @@ color: white;
     background: #eee;
 }
 .pagination span:hover {
+    color: white;
    background-color: rgba(32, 88, 110, 1);
 }
 
+@media(max-width:770px){
+.order-card {
+    width: 600px;
+    background: #fff;
+    margin: 0 auto 20px auto;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+.status.delivered {
+    width: 12vw;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 5vh;
+    background: green;
+    color: white;
+}
+.status.pending {
+    background: #fff3cd;
+    color: #856404;
+     width: 12vw;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 5vh; 
+}
+.status.shipped {
+ width: 12vw;
+    font-size: 17px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 5vh;
+    
+    background-color: orange;
+}
+.buyn-btn {
+    padding: 6px 12px;
+    background: red;
+    margin-top: 30px;
+    height: 5vh;
+    width: 12vw;
+    text-align: center;
+    font-size: 15px;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+}
+@media(max-width:450px){
+.order-card {
+    width: 350px;
+    background: #fff;
+    margin: 0 auto 20px auto;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+.order-img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 8px;
+    border: 2px solid #000;
+}
+}
