--- a/src/make/Faq.css
+++ b/src/make/Faq.css
@@ -1,113 +1,384 @@
-.faq{
+.faq {
     height: auto;
     width: 100vw;
     background-color: rgba(186, 242, 255, 1);
     display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    caret-color: transparent;
 }
 
 
-.faq-img{
+.faq-img {
     height: 600px;
     width: auto;
 
 }
-.boxer{
+
+.boxer {
     margin-top: 80px;
     height: auto;
     width: auto;
     background-color: antiquewhite;
     padding-bottom: 10px;
+    border-radius: 20px;
 }
-.boxer-img{
+
+.boxer-img {
     display: flex;
 }
+
 .boxer-img h1 {
-font-size: 45px;
-color: rgba(33, 65, 90, 1);
+    font-size: 45px;
+    color: rgba(33, 65, 90, 1);
 }
-.boxer-text h1{
+
+.boxer-text h1 {
     color: rgba(33, 65, 90, 1);
     font-size: 35px;
     font-weight: 600;
-padding-bottom: 20px;
+    padding-bottom: 20px;
     text-align: center;
-    
+
 
 }
-.faqim{
+
+.faqim {
     height: 120px;
     width: auto;
-margin-left: 100px;
+    margin-left: 100px;
 }
 
-
-
-
-
-
-.boxer2{
+.boxer2 {
     height: auto;
     width: auto;
-
+border-radius: 20px;
     margin-top: 120px;
     background-color: antiquewhite;
-padding: 10px;
+    padding: 10px;
 }
-.boxer-img2{
+
+.boxer-img2 {
     display: flex;
 }
+
 .boxer-img2 h1 {
-font-size: 45px;
-color: rgba(33, 65, 90, 1);
+    font-size: 45px;
+    color: rgba(33, 65, 90, 1);
 }
-.boxer-text2 h1{
+
+.boxer-text2 h1 {
     font-size: 35px;
     font-weight: 600;
     color: rgba(33, 65, 90, 1);
-padding-bottom: 20px;
+    padding-bottom: 20px;
     text-align: center;
-    
+
 
 }
-.faqim2{
+
+.faqim2 {
     height: 120px;
     width: auto;
-margin-left: 100px;
+    margin-left: 100px;
 }
 
 
 
 
-.boxer3{
+.boxer3 {
     height: auto;
     width: auto;
-margin-bottom: 70px;
+    border-radius: 20px;
+    margin-bottom: 70px;
     margin-top: 120px;
     background-color: antiquewhite;
-padding: 10px;
+    padding: 10px;
 }
-.boxer-img3{
+
+.boxer-img3 {
     display: flex;
 }
+
 .boxer-img3 h1 {
-font-size: 45px;
-color: rgba(33, 65, 90, 1);
+    font-size: 45px;
+    color: rgba(33, 65, 90, 1);
 }
-.boxer-text3 h1{
+
+.boxer-text3 h1 {
     font-size: 35px;
     font-weight: 600;
     color: rgba(33, 65, 90, 1);
-padding-bottom: 20px;
+    padding-bottom: 20px;
     text-align: center;
-    
+
 
 }
-.faqim3{
+
+.faqim3 {
     height: 120px;
     width: auto;
-margin-left: 100px;
+    margin-left: 100px;
 }
 
+@media(max-width:1026px) {
+    .faq-img {
+        height: 500px;
+        width: auto;
+
+    }
+}
+
+@media(max-width:770px) {
+    .faq-img {
+        height: 400px;
+        width: auto;
+
+    }
+}
+
+@media(max-width:429px) {
+    .faq-img {
+        margin-top: 30px;
+        height: 230px;
+        width: auto;
+    }
+
+    .boxer {
+       margin-top: 80px;
+        height: 30vh;
+        width: 85vw;
+        background-color: antiquewhite;
+        padding: 10px;
+        margin-left: 10px;
+    }
+
+    .boxer-img {
+        display: flex;
+    }
+
+    .boxer-img h1 {
+        font-size: 30px;
+        color: rgba(33, 65, 90, 1);
+    }
+
+    .boxer-text h1 {
+        color: rgba(33, 65, 90, 1);
+        font-size: 20px;
+        font-weight: 600;
+        text-align: center;
+
+
+    }
+
+    .faqim {
+        height: 80px;
+        width: auto;
+        margin-left: 60px;
+    }
+
+    .boxer2 {
+        margin-top: 80px;
+        height: 30vh;
+        width: 85vw;
+        background-color: antiquewhite;
+        padding: 10px;
+        margin-left: 10px;
+    }
+
+    .boxer-img2 {
+        display: flex;
+    }
+
+    .boxer-img2 h1 {
+        font-size: 30px;
+        color: rgba(33, 65, 90, 1);
+        
+    }
+
+    .boxer-text2 h1 {
+        font-size: 20px;
+        font-weight: 600;
+        color: rgba(33, 65, 90, 1);
+        text-align: center;
+
+
+    }
+
+    .faqim2 {
+        height: 80px;
+        width: auto;
+        margin-left: 60px;
+    }
+
+
+
+
+    .boxer3 {
+        margin-top: 80px;
+        height: 30vh;
+        width: 85vw;
+        background-color: antiquewhite;
+        padding: 10px;
+        margin-left: 10px;
+    }
+
+    .boxer-img3 {
+        display: flex;
+    }
+
+    .boxer-img3 h1 {
+        font-size: 30px;
+        color: rgba(33, 65, 90, 1);
+    }
+
+    .boxer-text3 h1 {
+        font-size: 20px;
+        font-weight: 600;
+        color: rgba(33, 65, 90, 1);
+        padding-bottom: 20px;
+        text-align: center;
+
+
+    }
+
+    .faqim3 {
+        height: 80px;
+        width: auto;
+        margin-left: 60px;
+    }
+}
+@media(max-width:380px){
+    .faqim3 {
+        height: 80px;
+        width: auto;
+        margin-left: 30px;
+    }
+.faqim2 {
+        height: 80px;
+        width: auto;
+        margin-left: 30px;
+    }
+     .faqim {
+        height: 80px;
+        width: auto;
+        margin-left: 30px;
+    }
+    .faq-img {
+        margin-top: 30px;
+        height: 200px;
+        width: auto;
+    }
+}
+@media(max-width:325px){
+    .faq-img {
+        margin-top: 30px;
+        height: 180px;
+        width: auto;
+    }
+     .boxer {
+       margin-top: 80px;
+        height: 33vh;
+        width: 85vw;
+        background-color: antiquewhite;
+        padding: 10px;
+        margin-left: 10px;
+        
+    }
+
+    .boxer-img {
+        display: flex;
+    }
+
+    .boxer-img h1 {
+        font-size: 25px;
+        color: rgba(33, 65, 90, 1);
+    }
+
+    .boxer-text h1 {
+        color: rgba(33, 65, 90, 1);
+        font-size: 20px;
+        font-weight: 600;
+        text-align: center;
+
+
+    }
+
+    .faqim {
+        height: 60px;
+        width: auto;
+        margin-left: 30px;
+    }
+
+    .boxer2 {
+        margin-top: 80px;
+        height: 30vh;
+        width: 85vw;
+        background-color: antiquewhite;
+        padding: 10px;
+        margin-left: 10px;
+    }
+
+    .boxer-img2 {
+        display: flex;
+    }
+
+    .boxer-img2 h1 {
+        font-size: 25px;
+        color: rgba(33, 65, 90, 1);
+        
+    }
+
+    .boxer-text2 h1 {
+        font-size: 20px;
+        font-weight: 600;
+        color: rgba(33, 65, 90, 1);
+        text-align: center;
+
+
+    }
+
+    .faqim2 {
+        height: 60px;
+        width: auto;
+        margin-left: 30px;
+    }
+
+
+
+
+    .boxer3 {
+        margin-top: 80px;
+        height: 30vh;
+        width: 85vw;
+        background-color: antiquewhite;
+        padding: 10px;
+        margin-left: 10px;
+    }
+
+    .boxer-img3 {
+        display: flex;
+    }
+
+    .boxer-img3 h1 {
+        font-size: 25px;
+        color: rgba(33, 65, 90, 1);
+    }
+
+    .boxer-text3 h1 {
+        font-size: 20px;
+        font-weight: 600;
+        color: rgba(33, 65, 90, 1);
+        padding-bottom: 20px;
+        text-align: center;
+
+
+    }
+
+    .faqim3 {
+        height: 60px;
+        width: auto;
+        margin-left: 30px;
+    }
+}
