--- a/src/make/Privacy.css
+++ b/src/make/Privacy.css
@@ -1,195 +1,312 @@
 .privacy {
     width: 100vw;
-    height: auto;
     background-color: rgba(186, 242, 255, 1);
-    margin-bottom: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
+/* --------- MAIN POLICY HEADER --------- */
 .policy {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 60px 80px;
+    box-sizing: border-box;
 }
 
 .policy h1 {
     font-size: 75px;
-    margin-left: 180px;
-    margin-top: 10vh;
-    line-height: 100px;
+    color: rgba(33, 65, 90, 1);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 700;
-    color: rgba(33, 65, 90, 1);
+    flex: 1;
+    min-width: 320px;
 }
 
 .priv-img {
+    flex: 1;
     height: 450px;
-    margin-left: 160px;
-    width: auto;
-}
-
-.policy-text {
-    height: auto;
-    width: 40vw;
-    border-radius: 20px;
-    background-color: rgba(255, 251, 233, 1);
-    margin-left: 70px;
-    margin-top: 70px;
-}
-
-.policy-text1 {
-    height: auto;
-    width: 40vw;
-    border-radius: 20px;
-    background-color: rgba(255, 251, 233, 1);
-    margin-left: 70px;
-    margin-top: 70px;
-}
-
-.policy-text2 {
-    height: auto;
-    width: 40vw;
-    border-radius: 20px;
-    background-color: rgba(255, 251, 233, 1);
-    margin-left: 70px;
-    margin-top: 70px;
-}
-
-.policy-text3 {
-    height: auto;
-    width: 40vw;
-    border-radius: 20px;
-    background-color: rgba(255, 251, 233, 1);
-    margin-left: 70px;
-    margin-top: 70px;
-}
-
-.policy-text h2 {
-    color: rgba(34, 65, 90, 1);
-    font-size: 30px;
-    text-align: center;
-    padding-bottom: 0%;
-    margin-bottom: 10px;
-    padding-top: 10px;
-}
-
-.policy-text1 h2 {
-    color: rgba(34, 65, 90, 1);
-    font-size: 30px;
-    text-align: center;
-    padding-bottom: 0%;
-    margin-bottom: 10px;
-    padding-top: 10px;
-}
-
-.policy-text2 h2 {
-    color: rgba(34, 65, 90, 1);
-    font-size: 30px;
-    text-align: center;
-    padding-bottom: 0%;
-    margin-bottom: 10px;
-    padding-top: 10px;
-}
-
-.policy-text3 h2 {
-    color: rgba(34, 65, 90, 1);
-    font-size: 30px;
-    text-align: center;
-    padding-bottom: 0%;
-    margin-bottom: 10px;
-    padding-top: 10px;
-}
-
-.policy-text p {
-    color: rgba(34, 65, 90, 1);
-    font-size: 20px;
-    text-align: justify;
-    margin-top: 0%;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-}
-
-.policy-text1 p {
-    color: rgba(34, 65, 90, 1);
-    font-size: 20px;
-    text-align: justify;
-    margin-top: 0%;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-}
-
-.policy-text2 p {
-    color: rgba(34, 65, 90, 1);
-    font-size: 20px;
-    text-align: justify;
-    margin-top: 0%;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-}
-
-.policy-text3 p {
-    color: rgba(34, 65, 90, 1);
-    font-size: 20px;
-    text-align: justify;
-    margin-top: 0%;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-}
-
-.priv1 {
-    height: 300px;
-    width: auto;
-    margin-top: 60px;
-}
-
-.priv2 {
-    height: 300px;
-    width: auto;
-    margin-top: 60px;
-}
-
-.priv3 {
-    height: 300px;
-    width: auto;
-    margin-top: 60px;
-}
-
-.priv4 {
-    height: 300px;
-    width: auto;
-    margin-top: 60px;
-}
-
-.second-policy {
     display: flex;
-    align-items: flex-start;
-    gap: 90px;
+    justify-content: center;
+    align-items: center;
 }
 
-.third-policy {
-    display: flex;
-    align-items: flex-start;
-    gap: 90px;
+.priv-img img {
+    height: 100%;
+    width: auto;
+    border-radius: 20px;
+    object-fit: cover;
 }
 
-.fourth-policy {
-    display: flex;
-    align-items: flex-start;
-    gap: 90px;
-}
-
+/* --------- POLICY ROWS --------- */
+.second-policy,
+.third-policy,
+.fourth-policy,
 .fifth-policy {
     display: flex;
-    align-items: flex-start;
-    gap: 90px;
+    justify-content: center;
+    align-items: stretch;
+    flex-wrap: wrap;
+    gap: 50px;
+    padding: 0 60px;
+    margin-top: 80px;
+    box-sizing: border-box;
 }
 
+/* --------- POLICY TEXT BOX --------- */
+.policy-text,
+.policy-text1,
+.policy-text2,
+.policy-text3 {
+    flex: 1;
+    min-width: 380px;
+    max-width: 600px;
+    background-color: rgba(255, 251, 233, 1);
+    border-radius: 20px;
+    padding: 25px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.policy-text h2,
+.policy-text1 h2,
+.policy-text2 h2,
+.policy-text3 h2 {
+    color: rgba(34, 65, 90, 1);
+    font-size: 28px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.policy-text p,
+.policy-text1 p,
+.policy-text2 p,
+.policy-text3 p {
+    color: rgba(34, 65, 90, 1);
+    font-size: 18px;
+    text-align: justify;
+    line-height: 28px;
+}
+
+/* --------- IMAGE SIDE --------- */
+.priv1,
+.priv2,
+.priv3,
+.priv4 {
+    flex: 1;
+    min-width: 380px;
+    max-width: 600px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.priv1 img,
+.priv2 img,
+.priv3 img,
+.priv4 img {
+    width: 100%;
+    height: 100%;
+    max-height: 400px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+/* --------- LAST IMAGE --------- */
 .lastone {
     height: 150px;
-    margin-top: 50px;
-    margin-left: 50px;
     width: auto;
-    margin-bottom: 0%;
+    margin-top: 10px;
 }
+
+@media(max-width:1026px) {
+    
+    .policy h1 {
+        font-size: 75px;
+        margin-left: 80px;
+        margin-top: 10vh;
+        line-height: 100px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-weight: 700;
+        color: rgba(33, 65, 90, 1);
+    }
+
+    .priv-img {
+        height: 380px;
+        margin-left: 0px;
+        width: auto;
+    }
+
+    .policy-text {
+        height: auto;
+        width: 40vw;
+        border-radius: 20px;
+        background-color: rgba(255, 251, 233, 1);
+        margin-left: 50px;
+        margin-top: 70px;
+    }
+
+    .policy-text1 {
+        height: auto;
+        width: 40vw;
+        border-radius: 20px;
+        background-color: rgba(255, 251, 233, 1);
+        margin-left: 0px;
+        margin-top: 70px;
+        margin-right: 30px;
+    }
+
+    .policy-text3 {
+        height: auto;
+        width: 40vw;
+        border-radius: 20px;
+        background-color: rgba(255, 251, 233, 1);
+        margin-left: 0px;
+        margin-right: 30px;
+        margin-top: 70px;
+    }}
+
+    /* --------- TABLET VIEW (768px) --------- */
+    @media (max-width: 768px) {
+        .policy {
+            padding: 40px;
+        }
+
+        .policy h1 {
+            font-size: 50px;
+            text-align: center;
+        }
+
+        .priv-img {
+            height: 300px;
+        }
+
+        .second-policy,
+        .third-policy,
+        .fourth-policy,
+        .fifth-policy {
+            gap: 30px;
+            padding: 0 20px;
+        }
+
+        .policy-text,
+        .policy-text1,
+        .policy-text2,
+        .policy-text3 {
+            min-width: 320px;
+            max-width: 100%;
+        }
+
+        .priv1,
+        .priv2,
+        .priv3,
+        .priv4 {
+            min-width: 320px;
+            max-width: 100%;
+        }
+    }
+
+    /* --------- MOBILE VIEW (480px & 320px) --------- */
+    @media (max-width: 480px) {
+        .policy {
+            padding: 20px;
+            justify-content: center;
+        }
+
+        .policy h1 {
+            font-size: 38px;
+            line-height: 50px;
+            text-align: center;
+        }
+
+        .priv-img {
+            height: 220px;
+        }
+
+        .second-policy,
+        .third-policy,
+        .fourth-policy,
+        .fifth-policy {
+            gap: 15px;
+            padding: 0 10px;
+        }
+
+        .policy-text,
+        .policy-text1,
+        .policy-text2,
+        .policy-text3 {
+            width: 90vw;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .policy-text h2 {
+            font-size: 22px;
+        }
+
+        .policy-text p {
+            font-size: 15px;
+            line-height: 24px;
+        }
+
+        .priv1,
+        .priv2,
+        .priv3,
+        .priv4 {
+            width: 90vw;
+            margin: 0 auto;
+        }
+
+        .priv1 img,
+        .priv2 img,
+        .priv3 img,
+        .priv4 img {
+            max-height: 250px;
+        }
+
+        .lastone {
+            height: 100px;
+        }
+    }
+
+    /* --------- EXTRA SMALL (320px specific fix) --------- */
+    @media (max-width: 320px) {
+        .policy h1 {
+            font-size: 30px;
+            line-height: 40px;
+        }
+
+        .priv-img {
+            height: 180px;
+        }
+
+        .policy-text,
+        .policy-text1,
+        .policy-text2,
+        .policy-text3 {
+            width: 95vw;
+            padding: 15px;
+        }
+
+        .policy-text h2 {
+            font-size: 20px;
+        }
+
+        .policy-text p {
+            font-size: 14px;
+            line-height: 22px;
+        }
+
+        .priv1 img,
+        .priv2 img,
+        .priv3 img,
+        .priv4 img {
+            max-height: 220px;
+        }
+    }
