--- a/src/make/bear.css
+++ b/src/make/bear.css
@@ -7,7 +7,7 @@
 
 .nav {
   height: 80vh;
-  width: 90vw;
+  width: 100vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -67,7 +67,7 @@
   max-height: 60vh;
   margin-top: 93px;
   z-index: 1;
-  margin-left: -380px;
+  margin-left: -450px;
 }
 
 .cone {
@@ -119,6 +119,7 @@
 
 .main {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
@@ -246,4 +247,167 @@
   margin: 0 auto;
   cursor: pointer;
 }
+}
+@media(max-width:768px){
+.lock1 {
+  height: 150px;
+  width: 150px;
+  background-color: silver;
+  border-radius: 100%;
+  margin-top: 10px;
+  margin-left: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  >img {
+    border-radius: 100%;
+    height: 100%;
+    width: 100%;
+
+  }
+}
+.main {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+}
+.lock p {
+  font-size: 14px;
+  text-align: center;
+  max-width: 200px;
+  margin:  15px;
+  cursor: pointer;
+}
+.text-box {
+  background: #FFD600;
+  padding: 70px 50px;
+  transform: skew(-30deg);
+  display: flex;
+  height: 17vh;
+  margin-left: 30px;
+  width: 95vw;
+  margin-top: 90px;
+  flex-direction: column;
+  justify-content: center;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 60px;
+  border-top-left-radius: 90px;
+}
+
+.ber img {
+    max-width: 35vw;
+    max-height: 60vh;
+    margin-top: 70px;
+    z-index: 1;
+    margin-left: -130px;
+  }
+.next {
+  height: 5vh;
+  width: 10vw;
+  margin-left:20vh;
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
+  cursor: pointer;
+
+}
+}
+@media(max-width:429px){
+.lock1 {
+  height: 150px;
+  width: 150px;
+  background-color: silver;
+  border-radius: 100%;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  >img {
+    border-radius: 100%;
+    height: 100%;
+    width: 100%;
+
+  }
+}
+.ber img {
+    width: auto;
+    height: 50vh;
+    margin-top: 100px;
+    z-index: 1;
+    margin-left: -130px;
+  }
+  .text-box h1 {
+  font-size: 20px;
+  font-weight: bold;
+  color: #000;
+  text-align: start;
+  margin-left: -29px;
+  line-height: 1.4;
+}
+.text-box small {
+  font-size: 14px;
+  font-weight: 600;
+  margin-top: 12px;
+  margin-left: -29px;
+  color: #333;
+}
+
+.text-box {
+  background: #FFD600;
+  padding: 70px 50px;
+  transform: skew(-30deg);
+  display: flex;
+  height: 7vh;
+  margin-left: 30px;
+  width: 95vw;
+  margin-top: 90px;
+  flex-direction: column;
+  justify-content: center;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 60px;
+  border-top-left-radius: 90px;
+}
+.main {
+  display: flex;
+  flex-wrap:  wrap;
+  justify-content: space-around;
+}
+.next {
+  height: 5vh;
+  width: 10vw;
+  margin-left:10vh;
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
+  cursor: pointer;
+  padding-bottom: 30px;
+
+}
+.bttn button {
+  height: 6vh;
+  width: auto;
+  font-size: 18PX;
+  margin-left: 22vw;
+  border: none;
+  border-radius: 20px;
+  font-weight: 600;
+  caret-color: transparent;
+  cursor: pointer;
+  margin-top: 50px;
+  background-color: rgba(252, 223, 64, 1);
+}
+.llo {
+  height: 4vh;
+  width: 10vw;
+  border-radius: 100%;
+  text-align: center;
+  caret-color: transparent;
+  display: flex;
+  gap: 20px;
+}
+
 }
