--- a/src/make/class.css
+++ b/src/make/class.css
@@ -37,11 +37,12 @@
 
 @media(max-width:1026px) {
     .class {
-    height: 55vh;
-    width: 100vw;
-    background-color: rgba(186, 242, 255, 1);
-    margin-top: 90px;
-}
+        height: 55vh;
+        width: 100vw;
+        background-color: rgba(186, 242, 255, 1);
+        margin-top: 20px;
+    }
+
     .class h1 {
         text-align: center;
         padding-top: 30px;
@@ -89,11 +90,28 @@
     }
 
     .pop {
-        height: 25vh;
-        width: 38vw;
-        margin-top: 40px;
+        height: 20vh;
+        width: 30vw;
+        margin: 40px;
         filter: drop-shadow(5px 5px 10px black);
-        font-size: 30px;
+        font-size: 25px;
+        display: flex;
+        font-weight: 700;
+        justify-content: center;
+        align-items: center;
+        background-color: #FFD19D;
+        border-radius: 100%;
+
+    }
+}
+
+@media(max-width:320px) {
+    .pop {
+        height: 20vh;
+        width: 34vw;
+        margin: 20px;
+        filter: drop-shadow(5px 5px 10px black);
+        font-size: 20px;
         display: flex;
         font-weight: 700;
         justify-content: center;
