--- a/src/make/product.css
+++ b/src/make/product.css
@@ -133,7 +133,7 @@ font-style: Extra Bold;
   margin-bottom: 10px;
 }
 
-.buy-btn {
+.buy-btn9 {
   background: rgba(32, 88, 110, 1);
   color: white;
   padding: 8px 16px;
@@ -144,7 +144,7 @@ font-style: Extra Bold;
   transition: background 0.3s ease;
 }
 
-.buy-btn:hover {
+.buy-btn9:hover {
   background: rgb(15, 69, 90);
 }
 
